--- a/demshop/baseapp/templates/baseapp/base.html
+++ b/demshop/baseapp/templates/baseapp/base.html
@@ -9,7 +9,7 @@
     <title>Магазин</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'shop/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'baseapp/fonts/font-awesome/css/font-awesome.min.css' %}">
     {% bootstrap_css %}
 
 </head>
