--- a/demshop/shop/templates/shop/django_basket.html
+++ b/demshop/shop/templates/shop/django_basket.html
@@ -57,8 +57,11 @@
                                        </div>
                                        <div class="d-flex flex-row align-items-center col-4">
                                           <div class="col-4">
-                                             <input type="number" class="counter form-control"
-                                                value="{{ record.count }}">
+                                             <form action="{% url 'django_add_to_basket' record.product.pk %}"
+                                                method="get">
+                                                <input name="new_count" type="number" class="counter form-control"
+                                                   value="{{ record.count }}" data-product-pk="{{ record.product_id }}">
+                                             </form>
                                           </div>
                                           <div class="col-6">
                                              <h5 class="ms-2 mb-0 product-price"
@@ -156,7 +159,8 @@
 
 <script>
    const basketContainerTag = document.querySelector('.basket-container');
-   basketContainerTag.addEventListener('input', (event) => changeBasketValue(event));
+   basketContainerTag.addEventListener('input', (event) => changeProductCount(event));
+
 
    function changeBasketValue(event) {
       let counter = event.target.closest('.counter');
@@ -178,6 +182,14 @@
 
       const basketValueTag = document.querySelector('#basket-value');
       basketValueTag.textContent = `${basketValue} р`;
+   }
+
+   function changeProductCount(event) {
+      let counter = event.target.closest('.counter');
+      if (!counter) return;
+
+      const form = counter.closest('form');
+      form.submit();
    }
 
 
