--- a/demshop/baseapp/templates/baseapp/main/index.html
+++ b/demshop/baseapp/templates/baseapp/main/index.html
@@ -7,7 +7,13 @@
 {% if request.user.is_authenticated %}
 
 {% trans 'Your username is' %} <b>{{ request.user.username }}</b>.
-
+({% if request.user.is_superuser %}
+Администратор
+{% elif request.user.is_staff %}
+Персонал
+{% else %}
+Обычный пользователь
+{% endif %})
 {% else %}
 
 {% trans 'You are a guest.' %}
